last try for contrast issues

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body, html {
   background-image: url('images/dropbox-icon-line-icon-connection-circuit-board.jpg');
   min-height: 100%;
   background-color: #2c3e50;
+  opacity: 0.75;
 }
 
 /* Second image (Portfolio) */
@@ -50,7 +51,6 @@ body, html {
   display: grid;
   justify-content: center;
   color: #dadada;
-  background-color: rgba(0, 0, 0, 0.01);
 }
 
 #visual-contexts {
